--- a/tools/pom.xml
+++ b/tools/pom.xml
@@ -20,14 +20,14 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <parent>
     <groupId>org.bitcoinj</groupId>
-    <artifactId>bitcoinj-parent</artifactId>
+    <artifactId>faircoinj-parent</artifactId>
     <version>0.12.2</version>
   </parent>
   <modelVersion>4.0.0</modelVersion>
 
-  <artifactId>bitcoinj-tools</artifactId>
+  <artifactId>faircoinj-tools</artifactId>
 
-  <name>bitcoinj Tools</name>
+  <name>faircoinj Tools</name>
   <description>A collection of useful tools that use the bitcoinj library to perform wallet operations</description>
 
   <build>
@@ -75,7 +75,7 @@
   <dependencies>
     <dependency>
       <groupId>org.bitcoinj</groupId>
-      <artifactId>bitcoinj-core</artifactId>
+      <artifactId>faircoinj-core</artifactId>
       <version>${project.parent.version}</version>
     </dependency>
     <dependency>
